--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
-.gradle
-/build/
+/target/
+!.mvn/wrapper/maven-wrapper.jar
 
-bin/
-.settings/
-.project
+### STS ###
+.apt_generated
 .classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-.DS_Store
-
+### IntelliJ IDEA ###
 .idea
-/out/
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
