corrigindo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 #
 # Profile config
-spring.profiles.active=${ACTIVE_PROFILE}:dev
+spring.profiles.active=${ACTIVE_PROFILE:dev}
 #
 # Connection config
-server.port=${SERVER_PORT}:8081
+server.port=${SERVER_PORT:8081}
 #
 # SQL Datasource configuration
-spring.datasource.url=${DATASOURCE_URL}:jdbc:postgresql://localhost:5432/mapfood
-spring.datasource.username=${DATASOURCE_USERNAME}:postgres
-spring.datasource.password=${DATASOUCE_PASSWORD}:postgres
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/mapfood}
+spring.datasource.username=${DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${DATASOUCE_PASSWORD:postgres}
 #
 # Hibernate specific configs
 #
 # PostgisDialect is needed to work with spatial data.
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+#
+# Postgres bugfix see: https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
