closes #7 Adicionado novos testes e substituido outros que não estavam testando nada :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/mapfood}
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOUCE_PASSWORD:postgres}
 #
+# MongoDB Datasource configuration
+spring.data.mongodb.database=mapfood
+#
 # Hibernate specific configs
 #
 # PostgisDialect is needed to work with spatial data.
