--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.Po
 #
 # Postgres bugfix see: https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+
+integration.google-api.secret-key=${GOOGLE_API_KEY:secret_key}
