implementando calculo de melhor rota utilizando serviços do Google.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,21 @@ spring.data.mongodb.database=mapfood
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 #
 # Postgres bugfix see: https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-
-
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#
+# Configurações relativas a API e o funcionamento do serviço.
+# TODO: é uma boa criar uma classe pra mapear essas configs.
+# API key do Google Services
 integration.google-api.secret-key=${GOOGLE_API_KEY:secret_key}
+#
+# Tempo de preparo em minutos do pedido
+mapfood.valores.tempo-preparo=10
+#
+# Consumo da motocicleta km/l
+mapfood.valores.consumo-motocicleta=42
+#
+# Distância máxima de entrega do estabelecimento (em KM)
+mapfood.valores.limite-distancia-entrega=20
+#
+# Distância limite de pesquisa por um motoboy para o estabelecimento (em KM)
+mapfood.valores.limite-distancia-motoboy=25
