Tenta implementar exceções

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=${SERVER_PORT:8081}
 # SQL Datasource configuration
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/mapfood}
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
-spring.datasource.password=1234
+spring.datasource.password=${DATASOURCE_PASSWORD:1234}
 #
 # MongoDB Datasource configuration
 spring.data.mongodb.database=mapfood
