--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
         </dependency>
 
         <!--Caching-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!--CSV Format-->
         <dependency>
