correções dos issues do codacy. trocando dialect do hibernate pra não usar mais o Postgis.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,7 @@ spring.data.mongodb.database=mapfood
 #
 # Hibernate specific configs
 #
-# PostgisDialect is needed to work with spatial data.
-spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 #
 # Postgres bugfix see: https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
