--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,17 @@
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 #
 # Connection config
+#
 server.port=${SERVER_PORT:8081}
 #
 # SQL Datasource configuration
+#
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/mapfood}
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:1234}
 #
 # MongoDB Datasource configuration
+#
 spring.data.mongodb.database=mapfood
 #
 # Hibernate specific configs
@@ -18,9 +21,15 @@ spring.data.mongodb.database=mapfood
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 #
 # Postgres bugfix see: https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
+#
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #
+# Configurações de Caching
+#
+spring.cache.type=redis
+#
 # Configurações relativas a API e o funcionamento do serviço.
+#
 # TODO: é uma boa criar uma classe pra mapear essas configs.
 # API key do Google Services
 integration.google-api.secret-key=${GOOGLE_API_KEY:secret_key}
